src/components/SearchEntry/SearchEntry.css
.title a {
    color: #1C76D5;
    font-weight: 600;
    text-decoration: none;
}

.title .highlight {
    color: #005bba;
    font-weight: 700;
}

.desc {
    margin-top: 5px;
    color: #424242;
    font-size: 14px;
    font-weight: 400;
}

.desc .highlight {
    color: #212121;
    font-weight: 700;
}

.link {
    margin-top: 5px;
    font-size: 12px;
}

.link a {
    color: #686868;
    text-decoration: none;
}

.link a:hover {
    text-decoration: underline;
}

